# btrider

./: CMakeLists.txt  build_me.bat  main.cpp
include/: cmddata.h  cmdfunctional.h  textres.h
source/: cmdfunctional.cpp  textres.cpp
